WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55218
getJNIEnv() passes wrong type to AttachCurrentThread() for JNIEnv argument on Android
https://bugs.webkit.org/show_bug.cgi?id=55218
Summary
getJNIEnv() passes wrong type to AttachCurrentThread() for JNIEnv argument on...
Steve Block
Reported
2011-02-25 07:47:01 PST
getJNIEnv() passes wrong type to AttachCurrentThread() for JNIEnv argument on Android
Attachments
Patch
(1.42 KB, patch)
2011-02-25 07:50 PST
,
Steve Block
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2011-02-25 07:48:10 PST
AttachCurrentThread() in Android's JVM takes a JINEnv** argument.
Steve Block
Comment 2
2011-02-25 07:50:49 PST
Created
attachment 83813
[details]
Patch
Jeremy Orlow
Comment 3
2011-02-25 12:48:08 PST
Comment on
attachment 83813
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2011-02-28 03:40:38 PST
Comment on
attachment 83813
[details]
Patch Clearing flags on attachment: 83813 Committed
r79852
: <
http://trac.webkit.org/changeset/79852
>
WebKit Commit Bot
Comment 5
2011-02-28 03:40:42 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug