2011-02-28  Steve Block  <steveblock@google.com>

Reviewed by Jeremy Orlow.

        getJNIEnv() passes wrong type to AttachCurrentThread() for JNIEnv argument on Android
        https://bugs.webkit.org/show_bug.cgi?id=55218

        AttachCurrentThread() in Android's JVM takes a JINEnv**
        argument.

        No new tests, build fix only.

        * bridge/jni/JNIUtility.cpp:
        (JSC::Bindings::getJNIEnv):

Canonical link: https://commits.webkit.org/69769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79852 268f45cc-cd09-0410-ab3c-d52691b4dbfc